IKDT-959 ProductCodeTransformer cleanup